# agentic-ai-voice-assistant

./: .gitignore  README.md  generate_token.py  pyproject.toml  requirements.txt  server.py  start_cloud_job.sh  test_graph_only.py
flow_ui/: README.md  package-lock.json  package.json
flow_ui/src/: App.css  App.tsx  index.css  index.tsx
flow_ui/src/components/: IntakeFlowVisualizer.tsx  SessionPanel.tsx
flow_ui/src/components/nodes/: StepNode.tsx
flow_ui/src/hooks/: useIntakeAPI.ts
flow_ui/src/types/: IntakeTypes.ts
src/: agent.py  empathetic_rewriter.py  strict_intake_assistant.py
